--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -133,9 +133,9 @@
                                 <a href="wishlist"><i class="fa fa-heart-o"></i></a>
                             </div>
                             <div class="same-style cart-wrap">
-                                <a href="#" class="cart-active">
+                                <a href="/" class="cart-active">
                                     <i class="dlicon shopping_bag-20"></i>
-                                    <span class="count-style">02</span>
+                                    <!-- <span class="count-style">02</span> -->
                                 </a>
                             </div>
                             <div class="same-style header-search">
@@ -155,7 +155,7 @@
                                     <ul>
                                         <li><a href="/login">Login</a></li>
                                         <li><a href="/signup">Register</a></li>
-                                        <li><a href="/accountinfo">Account</a></li>
+                                        <li><a href="/accountDetails">Account</a></li>
                                         <li><a href="/logout">Logout</a></li>
                                     </ul>
                                 </div>
@@ -184,24 +184,24 @@
                     <div class="col-6">
                         <div class="mobile-header-right-wrap">
                             <div class="header-right-wrap header-right-flex">
+                                <div class="same-style cart-wrap">
+                                    <a href="/productCart" class="cart-active">
+                                        <i class="dlicon shopping_bag-20"></i>
+                                        <!-- <span class="count-style">02</span> -->
+                                    </a>
+                                </div>
                                 <div class="dropdown same-style">
                                     <a href="#"><i class="fa fa-user"></i></a>
                                     <div class="dropdown-content account-dropdown-active">
                                         <ul>
-                                           
                                             <li><a href="/login">Login</a></li>
                                             <li><a href="/signup">Register</a></li>
-                                            <li><a href="/accountinfo">Account</a></li>
+                                            <li><a href="/accountDetails">Account</a></li>
                                             <li><a href="/logout">Logout</a></li>
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="same-style cart-wrap">
-                                    <a href="/productCart" class="cart-active">
-                                        <i class="dlicon shopping_bag-20"></i>
-                                        <span class="count-style">02</span>
-                                    </a>
-                                </div>
+
                                 <div class="same-style header-off-canvas">
                                     <a class="header-aside-button" href="#">
                                         <i class="dlicon ui-3_menu-left"></i>
@@ -231,8 +231,8 @@
             <div class="sidebar-cart-all">
                 <a class="cart-close" href="/productCart"><i class="dlicon ui-1_simple-remove"></i></a>
                 <div class="cart-content">
-                    <h3>Shopping Cart</h3>
-                    <ul>
+                    <!-- <h3>Shopping Cart</h3> -->
+                    <!-- <ul>
                         <li class="single-product-cart">
                             <div class="cart-img">
                                 <a href="#"><img src="assets/userAssets/images/cart/cart-1.jpg" alt=""></a>
@@ -257,10 +257,10 @@
                                 <a href="#">×</a>
                             </div>
                         </li>
-                    </ul>
-                    <div class="cart-total">
+                    </ul> -->
+                    <!-- <div class="cart-total">
                         <h4>Subtotal: <span>$170.00</span></h4>
-                    </div>
+                    </div> -->
                     <div class="cart-checkout-btn">
                         <a class="btn-hover cart-btn-style" href="/productCart">view cart</a>
                         <a class="no-mrg btn-hover cart-btn-style" href="/checkout">checkout</a>
