--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -6,11 +6,16 @@
         <div class="breadcrumb-content breadcrumb-font-inc" >
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li><span> > </span></li>
                 <li>
-                    <a href="index.html">Product Details</a>
+                <li>
+                    <a href="/allProducts">All Products</a>
+                </li>
+                <li><span> > </span></li>
+                <li>
+                    <a href="/product-details">Product Details</a>
                 </li>
                 
             </ul>
@@ -46,17 +51,13 @@
                         </div>
                         <%  }) } %>
                      
-                    </div>
+                    </div>   
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="row">
                     <div class="product-details-col-72">
                         <div class="product-details-content p-dec-content-edit">
-                            <div class="pro-dec-next-prev">
-                                <a class="prev" href="#"><i class="dlicon arrows-1_tail-left"></i></a>
-                                <a class="next" href="#"><i class="dlicon arrows-1_tail-right"></i></a>
-                            </div>
                             <% if (locals.proDetails) { %>
                                 <h2 class="uppercase"><%= proDetails.productName %></h2>
                                 <div class="product-details-ratting-wrap">
@@ -90,22 +91,20 @@
                                     <div class="product-details-action-wrap">
                                         <div class="product-details-quality">
                                             <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" id="quantityNum" type="text" name="qtybutton" value="1">
+                                                <input class="cart-plus-minus-box" id="quantityNum" type="text" name="prodQuantity" value="1">
                                             </div>
                                         </div>
                                         <div class="product-details-cart">
-                                            <a title="Add to cart" href="#" onclick="addToCart()">Add to cart</a>
+                                          
+                                            <a title="Add to cart" id="addToCartButton"  onclick="addToCart()">Add to cart</a>
                                         </div>
-                                        <div class="product-details-cart">
-                                            <a style="background-color: rgb(17, 17, 17);" title="Buy now" href="/buyNow">Buy Now</a>
-                                        </div>
+                                        <!-- <div class="product-details-cart">
+                                            <a style="background-color: rgb(17, 17, 17);" href="+" title="Buy now" href="/buyNow">Buy Now</a>
+                                        </div> -->
                                         <div class="product-details-wishlist">
                                             <a title="Add to wishlist" href="#"><i class="fa fa-heart"></i></a>
-                                        </div>
-                                        <div class="product-details-compare">
-                                            <a title="Add to compare" href="#"><i class="dlicon arrows-4_compare"></i></a>
-                                        </div>
-                                    </div>
+                                        </div>  
+                                    </div>   
                                     <div class="product-details-info">
                                         <a href="#"><i class="dlicon location_pin"></i>Store availability</a>
                                         <a href="#"><i class="dlicon envir_car"></i>Delivery and return</a>
@@ -270,7 +269,8 @@
                                             </div>
                                             <div class="col-lg-8 col-md-6 col-sm-7">
                                                 <div class="pro-dec-brand-content">
-                                                    <p>Donec accumsan auctor iaculis. Sed suscipit arcu ligula, at egestas magna molestie a. Proin ac ex maximus, ultrices justo eget, sodales orci. Aliquam egestas libero ac turpis pharetra, in vehicula lacus scelerisque. Vestibulum ut sem laoreet, feugiat tellus at, hendrerit arcu..</p>
+                                                    <p><%= brandDetails.brandName %></p>
+                                                    <p>Donec accumsan auctor iaculis. Sed suscipit arcu ligula, at egestas magna molestie a. Proin ac ex maximus, ultrices justo eget, sodales orci. Aliquam egestas libero ac turpis pharetra, in vehicula lacus scelerisque</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -410,66 +410,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-wrap">
-                <div class="product-img default-overlay mb-25">
-                    <a href="product-details.html">
-                        <img class="default-img" src="/assets/userAssets/images/team/member-01.jpg" alt="">
-                        <img class="hover-img" src="/assets/userAssets/images/team/member-03.jpg" alt="">
-                    </a>
-                    <div class="product-action product-action-position-1">
-                        <a data-bs-toggle="modal" data-bs-target="#exampleModal" href="#"><i class="fa fa-eye"></i><span>Quick Shop</span></a>
-                        <a title="Add to Wishlist" href="#"><i class="fa fa-heart"></i><span>Add to Wishlist</span></a>
-                        <a class="icon-blod" title="Add to Compare" href="#"><i class="dlicon arrows-4_compare"></i><span>Add to Compare</span></a>
-                        <a title="Add to Cart" href="#"><i class="fa fa-shopping-cart"></i><span>Add to Cart</span></a>
-                    </div>
-                </div>
-                <div class="product-content-2 title-font-width-400 text-center">
-                    <h3><a href="product-details.html">News strappy sandals</a></h3>
-                    <div class="product-price">
-                        <span class="new-price">$26.00</span>
-                    </div>
-                </div>
-            </div>
-            <div class="product-wrap">
-                <div class="product-img default-overlay mb-25">
-                    <a href="product-details.html">
-                        <img class="default-img" src="/assets/userAssets/images/team/member-01.jpg" alt="">
-                        <img class="hover-img" src="/assets/userAssets/images/team/member-03.jpg" alt="">
-                    </a>
-                    <div class="product-action product-action-position-1">
-                        <a data-bs-toggle="modal" data-bs-target="#exampleModal" href="#"><i class="fa fa-eye"></i><span>Quick Shop</span></a>
-                        <a title="Add to Wishlist" href="#"><i class="fa fa-heart"></i><span>Add to Wishlist</span></a>
-                        <a class="icon-blod" title="Add to Compare" href="#"><i class="dlicon arrows-4_compare"></i><span>Add to Compare</span></a>
-                        <a title="Add to Cart" href="#"><i class="fa fa-shopping-cart"></i><span>Add to Cart</span></a>
-                    </div>
-                </div>
-                <div class="product-content-2 title-font-width-400 text-center">
-                    <h3><a href="product-details.html">Check bermuda shorts</a></h3>
-                    <div class="product-price">
-                        <span class="new-price">$39.00</span>
-                    </div>
-                </div>
-            </div>
-            <div class="product-wrap">
-                <div class="product-img default-overlay mb-25">
-                    <a href="product-details.html">
-                        <img class="default-img" src="/assets/userAssets/images/team/member-01.jpg" alt="">
-                        <img class="hover-img" src="/assets/userAssets/images/team/member-03.jpg" alt="">
-                    </a>
-                    <div class="product-action product-action-position-1">
-                        <a data-bs-toggle="modal" data-bs-target="#exampleModal" href="#"><i class="fa fa-eye"></i><span>Quick Shop</span></a>
-                        <a title="Add to Wishlist" href="#"><i class="fa fa-heart"></i><span>Add to Wishlist</span></a>
-                        <a class="icon-blod" title="Add to Compare" href="#"><i class="dlicon arrows-4_compare"></i><span>Add to Compare</span></a>
-                        <a title="Add to Cart" href="#"><i class="fa fa-shopping-cart"></i><span>Add to Cart</span></a>
-                    </div>
-                </div>
-                <div class="product-content-2 title-font-width-400 text-center">
-                    <h3><a href="product-details.html">Down puffer coat collar</a></h3>
-                    <div class="product-price">
-                        <span class="new-price">$55.00</span>
-                    </div>
-                </div>
-            </div>
+          
         </div>
     </div>
 </div>
@@ -484,7 +425,6 @@ function addToCart(){
     console.log("addToCart Ajax is working")
     const prodQuantity = document.getElementById("quantityNum").value
     const productId = document.getElementById("proId").value
-   
     //AJAX request
     $.ajax({
             url: "/addToCart",
@@ -495,39 +435,41 @@ function addToCart(){
                 
             },
             success: (response) => {
-                if (response.status == true) {
-                    Swal.fire({
-
-                        icon: "success",
-                        title: "Add to Cart",
-                        showConfirmButton: false,
-                        timer: 1500
-                    }).then((result) => {
-                        window.location.href = "/cart"
-                    })
-
-                } else if (response.status == "viewCart") {
-                    window.location.href = "/cart"
-                } 
-                // else if (response.status == "login") {
-
-                //     Swal.fire({
-
-                //         text: "You want to login the page?!",
-                //         icon: "warning",
-                //         showCancelButton: true,
-                //         confirmButtonColor: "#3085d6",
-                //         cancelButtonColor: "#d33",
-                //         confirmButtonText: "Go to login!"
-                //     }).then((result) => {
-                //         if (result.isConfirmed) {
-                //             window.location.href = "/login"
-                //         }
-                //     })
-                // }
+    if (response.status === "success") {
+        Swal.fire({
+            icon: "success",
+            title: "Product added to cart",
+            showConfirmButton: false,
+            timer: 2000,
+        }).then((result) => {
+            document.getElementById("addToCartButton").innerText = "View Cart ";
+            window.location.href = "/productCart";
+        });
+    } else if (response.status === "alreadyInCart") {
+        Swal.fire({
+            icon: "info",
+            title: "Product already in cart",
+            showConfirmButton: false,
+            timer: 2000,
+        });
+    } else if (response.status === "login") {
+        Swal.fire({
+            text: "You want to login the page?!",
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonColor: "#3085d6",
+            cancelButtonColor: "#d33",
+            confirmButtonText: "Go to login!"
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = "/login";
             }
-        })
+        });
     }
+}
+
+        })
+}
 
 
 
